unpackaged/main/default/objects/Commitment__c/Commitment__c.object-meta.xml
<CustomObject>
    <label>Commitment</label>
    <nameField>
        <displayFormat>CMT - {000000}</displayFormat>
        <label>Commitment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>