unpackaged/main/default/objects/Commitment__c/fields/Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Received</label>
    <type>Checkbox</type>
</CustomField>