unpackaged/main/default/objects/Commitment__c/fields/AllowChange__c.field-meta.xml
<CustomField>
    <fullName>AllowChange__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AllowChange</label>
    <type>Checkbox</type>
</CustomField>