unpackaged/main/default/objects/Commitment__c/fields/Anti_money_laundering__c.field-meta.xml
<CustomField>
    <fullName>Anti_money_laundering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti-money laundering</label>
    <type>Checkbox</type>
</CustomField>