unpackaged/main/default/objects/Commitment__c/fields/Called_Due__c.field-meta.xml
<CustomField>
    <fullName>Called_Due__c</fullName>
    <formula>IF((Total_Amount_Called__c = 0), 0, (Total_Commitment_Due__c /Total_Amount_Called__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Called Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>