unpackaged/main/default/objects/Commitment__c/fields/Capital_Returned_Non_Recallable__c.field-meta.xml
<CustomField>
    <fullName>Capital_Returned_Non_Recallable__c</fullName>
    <label>Capital Returned (Non-Recallable)</label>
    <summarizedField>Investor_Distribution__c.Capital_Return__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Distribution__c.Capital_Recallable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Distribution__c.Commitment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>