unpackaged/main/default/objects/Commitment__c/fields/Carried_Interest__c.field-meta.xml
<CustomField>
    <fullName>Carried_Interest__c</fullName>
    <label>Carried Interest %</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>