unpackaged/main/default/objects/Commitment__c/fields/Commitment_Amount_nearest__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Amount_nearest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commitment Amount</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>