unpackaged/main/default/objects/Commitment__c/fields/Commitment_Amount_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Amount_USD_mn__c</fullName>
    <formula>Commitment_Amount_nearest__c/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Amount (mn)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>