unpackaged/main/default/objects/Commitment__c/fields/Commitment_Called__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Called__c</fullName>
    <formula>Total_Amount_Called__c /  Commitment_Amount_nearest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Commitment Called</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>