unpackaged/main/default/objects/Commitment__c/fields/Final_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Commitment_Date__c</fullName>
    <label>Final Commitment Date</label>
    <type>Date</type>
</CustomField>