unpackaged/main/default/objects/Commitment__c/fields/Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Fundraising__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising</label>
    <referenceTo>Fundraising__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>