unpackaged/main/default/objects/Commitment__c/fields/Investment_Period_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Investment_Period_Management_Fee__c</fullName>
    <label>Investment Period Management Fee %</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>