unpackaged/main/default/objects/Commitment__c/fields/Investor_Template_Received__c.field-meta.xml
<CustomField>
    <fullName>Investor_Template_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Template Received</label>
    <type>Checkbox</type>
</CustomField>