unpackaged/main/default/objects/Commitment__c/fields/Limited_Partner__c.field-meta.xml
<CustomField>
    <fullName>Limited_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limited Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitment</relationshipName>
    <type>Lookup</type>
</CustomField>