unpackaged/main/default/objects/Commitment__c/fields/LP_Lookup__c.field-meta.xml
<CustomField>
    <fullName>LP_Lookup__c</fullName>
    <formula>Limited_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LP Lookup</label>
    <type>Text</type>
</CustomField>