unpackaged/main/default/objects/Commitment__c/fields/LPAddress__c.field-meta.xml
<CustomField>
    <fullName>LPAddress__c</fullName>
    <formula>Limited_Partner__r.BillingStreet + &#39;,&#39; + BR() + Limited_Partner__r.BillingCity + &#39;, &#39; + Limited_Partner__r.BillingState + &#39;, &#39; + Limited_Partner__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPAddress</label>
    <type>Text</type>
</CustomField>