unpackaged/main/default/objects/Commitment__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitment</relationshipName>
    <type>Lookup</type>
</CustomField>