unpackaged/main/default/objects/Commitment__c/fields/Partnership_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Lookup__c</fullName>
    <formula>Partnership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Lookup</label>
    <type>Text</type>
</CustomField>