unpackaged/main/default/objects/Commitment__c/fields/Placement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Placement_Fee__c</fullName>
    <label>Placement Fee %</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>