unpackaged/main/default/objects/Commitment__c/fields/Portfolio_Company__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitment_Company</relationshipName>
    <type>Lookup</type>
</CustomField>