unpackaged/main/default/objects/Commitment__c/fields/Side_Letter__c.field-meta.xml
<CustomField>
    <fullName>Side_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Letter</label>
    <type>Checkbox</type>
</CustomField>