unpackaged/main/default/objects/Commitment__c/fields/Side_Letter_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Side_Letter_Effective_Date__c</fullName>
    <label>Side Letter Effective Date</label>
    <type>Date</type>
</CustomField>