unpackaged/main/default/objects/Commitment__c/fields/Side_Letter_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Side_Letter_Provisions__c</fullName>
    <label>Side Letter Provisions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>