unpackaged/main/default/objects/Commitment__c/fields/Sub_doc_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_doc_Description__c</fullName>
    <label>Sub-doc Description</label>
    <type>TextArea</type>
</CustomField>