unpackaged/main/default/objects/Commitment__c/fields/Sub_doc_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Sub_doc_Effective_Date__c</fullName>
    <label>Sub-doc Effective Date</label>
    <type>Date</type>
</CustomField>