unpackaged/main/default/objects/Commitment__c/fields/Sub_docs__c.field-meta.xml
<CustomField>
    <fullName>Sub_docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub-docs</label>
    <type>Checkbox</type>
</CustomField>