unpackaged/main/default/objects/Commitment__c/fields/Tax_Forms__c.field-meta.xml
<CustomField>
    <fullName>Tax_Forms__c</fullName>
    <label>Tax Forms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W-8BEN</fullName>
            </value>
            <value>
                <fullName>W-8IMY</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>