unpackaged/main/default/objects/Commitment__c/fields/Total_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received__c</fullName>
    <label>Total Amount Received</label>
    <summarizedField>Capital_Call__c.Call_Amount_Received__c</summarizedField>
    <summaryForeignKey>Capital_Call__c.Commitment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>