unpackaged/main/default/objects/Commitment__c/fields/Total_Commitment_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitment_Due__c</fullName>
    <formula>Total_Amount_Called__c - Total_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commitment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>