unpackaged/main/default/objects/Commitment__c/fields/Total_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Distributions__c</fullName>
    <label>Total Distributions</label>
    <summarizedField>Investor_Distribution__c.Total_Distributions__c</summarizedField>
    <summaryForeignKey>Investor_Distribution__c.Commitment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>