unpackaged/main/default/objects/Commitment__c/fields/Total_Uncalled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Uncalled_Amount__c</fullName>
    <formula>Commitment_Amount_nearest__c -Total_Amount_Called__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Uncalled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>