unpackaged/main/default/objects/Commitment__c/validationRules/Check_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Amount</fullName>
    <active>true</active>
    <description>This VD checks if the Commitment Amount is greater than zero.</description>
    <errorConditionFormula>IF( Commitment_Amount_nearest__c &lt; 0, true, false)</errorConditionFormula>
    <errorDisplayField>Commitment_Amount_nearest__c</errorDisplayField>
    <errorMessage>Commitment Amount cannot be less than zero.</errorMessage>
</ValidationRule>