unpackaged/main/default/objects/Commitment__c/validationRules/Check_Limited_Partner_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Limited_Partner_Edit</fullName>
    <active>true</active>
    <description>To restrict the edit of a Limited Partner in a commitment record</description>
    <errorConditionFormula>ISCHANGED(Limited_Partner__c )</errorConditionFormula>
    <errorDisplayField>Limited_Partner__c</errorDisplayField>
    <errorMessage>Cannot change this value once set.</errorMessage>
</ValidationRule>