unpackaged/main/default/objects/Commitment__c/validationRules/Check_LP_is_Inst_and_Part_fund_Coint.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_LP_is_Inst_and_Part_fund_Coint</fullName>
    <active>false</active>
    <description>Handled in trigger.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>Limited_Partner__c</errorDisplayField>
    <errorMessage>Please select a Limited Partner.</errorMessage>
</ValidationRule>