unpackaged/main/default/objects/Commitment__c/validationRules/Check_Partnership_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Partnership_Change</fullName>
    <active>true</active>
    <description>To restrict the edit of Partnership in a commitment record</description>
    <errorConditionFormula>ISCHANGED( Partnership__c )</errorConditionFormula>
    <errorDisplayField>Partnership__c</errorDisplayField>
    <errorMessage>Cannot change this value once set.</errorMessage>
</ValidationRule>