unpackaged/main/default/objects/Commitment__c/validationRules/Check_Portfolio_Company_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Portfolio_Company_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Partnership__r.Fund_Investment_Category__c=&quot;Co-investment&quot;,IF(LEN( Portfolio_Company__c) =0,TRUE,FALSE),Id=null)</errorConditionFormula>
    <errorDisplayField>Portfolio_Company__c</errorDisplayField>
    <errorMessage>Please select a Portfolio Company.</errorMessage>
</ValidationRule>