unpackaged/main/default/objects/Commitment__c/validationRules/Check_Portfolio_Company_blank_fund_fund.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Portfolio_Company_blank_fund_fund</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Partnership__r.Fund_Investment_Category__c =&quot;Fund&quot;,IF(LEN( Portfolio_Company__c) &gt;0,TRUE,FALSE),Id=null)</errorConditionFormula>
    <errorMessage>You cannot link a &quot;Portfolio Company&quot; to a Fund Commitment. In order to create a &quot;Co-investment Commitment&quot;, please first select a &quot;Co-investment Partnership&quot; and then select the &quot;Portfolio Company&quot;.</errorMessage>
</ValidationRule>