unpackaged/main/default/objects/Commitment__c/validationRules/Check_Portfolio_Company_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Portfolio_Company_Change</fullName>
    <active>false</active>
    <description>To restrict the edit of Portfolio Company in a commitment record</description>
    <errorConditionFormula>ISCHANGED( Portfolio_Company__c )</errorConditionFormula>
    <errorDisplayField>Portfolio_Company__c</errorDisplayField>
    <errorMessage>Cannot change this value once set.</errorMessage>
</ValidationRule>