unpackaged/main/default/objects/Commitment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Limited_Partner__c</columns>
    <columns>Partnership__c</columns>
    <columns>Commitment_Amount_nearest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>